--- a/data/common.yaml
+++ b/data/common.yaml
@@ -2,7 +2,7 @@
 puppet_enterprise::master::code_manager::git_settings:
   repositories:
      - remote: "git@github.com:jmick44/control-repo-2.git"
-       private-key: "/etc/puppetlabs/puppetserver/ssh/id-control_repo.rsa”
+       private-key: "/etc/puppetlabs/puppetserver/ssh/id-control_repo.rsa"
      - remote: "git@github.com:jmick44/control-repo-2.git"
        private-key: "/etc/puppetlabs/puppetserver/ssh/id_rsa_2"
 
