--- a/data/common.yaml
+++ b/data/common.yaml
@@ -1,10 +1,9 @@
 ---
-puppet_enterprise::master::code_manager::git_settings:
-  repositories:
-     - remote: "git@github.com:jmick44/control-repo.git"
-       private-key: "/etc/puppetlabs/puppetserver/ssh/id-control_repo.rsa"
-     - remote: "git@github.com:jmick44/control-repo-2.git"
-       private-key: "/etc/puppetlabs/puppetserver/ssh/id_rsa_2"
+puppet_enterprise::master::code_manager::git_settings::repositories:
+  - remote: "git@github.com:jmick44/control-repo.git"
+    private-key: "/etc/puppetlabs/puppetserver/ssh/id-control_repo.rsa"
+  - remote: "git@github.com:jmick44/control-repo-2.git"
+    private-key: "/etc/puppetlabs/puppetserver/ssh/id_rsa_2"
 
 puppet_enterprise::master::code_manager::sources:
   one: 
